source/carehub/main/default/objects/ProtocolActivator__c/fields/Global__c.field-meta.xml
<CustomField>
    <fullName>Global__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify where to use it among all cases or only on a specific one</description>
    <label>Global</label>
    <type>Checkbox</type>
</CustomField>