source/carehub/main/default/objects/ProtocolActivator__c/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Name</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Protocol Activators</relationshipLabel>
    <relationshipName>ProtocolActivators</relationshipName>
    <type>Lookup</type>
</CustomField>