source/carehub/main/default/objects/ProtocolActivator__c/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocol Name</label>
    <referenceTo>Protocol__c</referenceTo>
    <relationshipLabel>Protocol Activators</relationshipLabel>
    <relationshipName>ProtocolActivators</relationshipName>
    <type>Lookup</type>
</CustomField>